--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^8.10.0
+  flutter_spinkit: ^4.1.2+1
+  url_launcher: ^5.7.8
+  image_picker:
+  firebase_storage:
 
 
   # The following adds the Cupertino Icons font to your application.
