--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -23,16 +23,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^8.10.0
-  flutter_spinkit: ^4.1.2+1
-  url_launcher: ^5.7.8
-  image_picker:
-  firebase_storage:
-
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+5
+  provider: ^3.2.0
+  shared_preferences: ^0.5.6+3  
+  random_string: ^2.0.1
+  flutter_slidable:
+  cupertino_icons: ^0.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  
 
 dev_dependencies:
   flutter_test:
