--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   shared_preferences: ^0.5.6+3  
   random_string: ^2.0.1
   flutter_slidable:
+  flutter_spinkit: ^4.1.2+1
+  font_awesome_flutter: ^8.5.0
   cupertino_icons: ^0.1.3
 
   # The following adds the Cupertino Icons font to your application.
