--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
   random_string: ^2.0.1
   flutter_slidable:
   flutter_spinkit: ^4.1.2+1
-  font_awesome_flutter: ^8.5.0
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
+  google_maps_flutter: ^1.0.5
+  font_awesome_flutter: ^8.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
