--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+4
+  url_launcher:
+  webview_flutter: ^0.3.19+9
+  cached_network_image: ^2.0.0
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
@@ -35,6 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   google_maps_flutter: ^1.0.5
   font_awesome_flutter: ^8.10.0
+  image_picker: ^0.6.7+12
+  flutter_sms: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
