--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   cupertino_icons: ^1.0.0
   google_maps_flutter: ^1.0.5
+  geolocator: ^5.1.2
   font_awesome_flutter: ^8.10.0
   image_picker: ^0.6.7+12
   flutter_sms: ^2.0.0
+  firebase_storage:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
