--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_sms: ^2.0.0
   provider: ^4.0.4
   firebase_storage:
+  animated_text_kit: ^4.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
