--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   provider: ^4.0.4
   firebase_storage:
   animated_text_kit: ^4.1.0
-  
+  fluttertoast: ^8.0.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
