latitude longitute  info of user

--- a/plasma_donor/pubspec.yaml
+++ b/plasma_donor/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+4
+  uuid: ^2.2.2
   url_launcher:
   webview_flutter: ^0.3.19+9
   cached_network_image: ^2.0.0
@@ -46,6 +47,7 @@ dependencies:
   firebase_storage:
   animated_text_kit: ^4.1.0
   fluttertoast: ^8.0.3
+  
 
 
 
